<resources>
    <string name="app_name">InfoEstadios</string>
    <string name="email">correo</string>
    <string name="login">Iniciar sesion</string>
    <string name="contrasenia">contraseña</string>
    <string name="login_google">login con google</string>
    <string name="login_registrarse" translatable="false">¿Aún no tienes cuenta? Registrate aqui</string>
    <string name="logoapp" translatable="false">LogoApp</string>
    <string name="registrarse">Registrarse</string>
    <string name="login_aqui" translatable="false">¿Tienes cuenta? Incia sesión aquí</string>
    <string name="repite_contrasenia">repite contraseña</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Estadios</string>
    <string name="menu_gallery">Mapa</string>
    <string name="menu_slideshow">Informacion</string>
    <string name="username">nombre usuario</string>
    <string name="menu_estadio">Estadios</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="linterna">Linterna</string>
    <string name="aceptar">Aceptar</string>
    <string name="prefs_file" translatable="false">com.icoello.myalication.PREFERENCE_FILE_KEY</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Encender">Encender</string>
    <string name="google_maps_key" translatable="false">AIzaSyDWf0kbb7iH44L4pkFchvaoWyQfuN-ET6I</string>
    <string name="cancelar">Cancelar</string>
    <string name="no_net">Error, sin conexion a internet</string>
    <string name="email_incorrecto">Correo invalido</string>
    <string name="isEmpty">Vacío</string>
    <string name="Gallery">Galeria</string>
    <string name="Photo">Cámara</string>
    <string name="SelectOption">Selecciona una opción</string>
    <string name="need_camera">necesitas camara</string>
    <string name="error_camera">Error con la camara</string>
    <string name="error_gallery">Error con la galeria</string>
    <string name="isAlreadyExist">Ya esta registrado este correo</string>
    <string name="need_gallery">Sin permisos de galeria</string>
    <string name="userNotCorrect">Correo o contraseña invalidos</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="nombre_estadio">Nombre Estadio</string>
</resources>