<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Lugares">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                            android:id="@+id/nav_estadios"
                            android:icon="@drawable/ic_menu_camera"
                            android:title="@string/menu_estadio" />
                    <item
                            android:id="@+id/nav_mapa"
                            android:icon="@drawable/ic_menu_gallery"
                            android:title="@string/menu_mapa" />
                </group>
            </menu>
        </item>

        <item android:title="Utilidades">
            <menu>
                <group android:checkableBehavior="single">
                  <item
                      android:id="@+id/nav_linterna"
                      android:icon="@drawable/ic_linterna"
                      android:title="@string/linterna"/>

                </group>
            </menu>
        </item>

        <item android:title="Acerca de">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                            android:id="@+id/nav_perfil"
                            android:icon="@drawable/ic_menu_slideshow"
                            android:title="@string/menu_perfil" />
                    <item
                            android:id="@+id/nav_developer"
                            android:icon="@drawable/ic_menu_camera"
                            android:title="Desarrollador" />
                </group>
            </menu>
        </item>
    </group>
</menu>