<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.perfil.PerfilFragment"
        android:background="@drawable/fondo"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/perfilFoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/user"
            android:contentDescription="@string/logoapp"
            android:layout_gravity="center"
            app:layout_constraintHorizontal_bias="0.501" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mi perfil"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginLeft="33dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/perfilUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginLeft="70dp"
                android:textColor="@color/white"
                android:textSize="18sp" />

        <TextView
                android:id="@+id/perfilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Desarrollador"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center" />

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/dev"
                android:layout_gravity="center" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Iván Coello Cortés"
                android:gravity="center"
                android:textColor="@color/white" />

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/perfilTwitter"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/twitter"
                    android:layout_gravity="left"
                    android:layout_marginLeft="70dp" />

            <ImageView
                    android:id="@+id/perfilGitHub"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/github"
                    android:layout_marginLeft="150dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>